--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compumatrix bitshares-ui-style-guide",
+  "name": "bitshares-ui-style-guide",
   "version": "1.0.0",
   "description": "Welcome to bitshares ui style-guide",
   "main": "dist/main.js",
